completed section 1/2, explained section 3

--- a/notebooks/section_three.ipynb
+++ b/notebooks/section_three.ipynb
@@ -1,10 +1,137 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Section Three: Deep Learning - Model Fine-Tuning for Crop Mapping\n",
+    "\n",
+    "In this section, you will implement a pipeline that fine-tunes a pretrained segmentation model to\n",
+    "perform crop mapping using Sentinel-2 imagery.\n",
+    "### Objective:\n",
+    "\n",
+    "Your task is to:\n",
+    "- Fine-tune a pretrained segmentation model. You can use the same model from section\n",
+    "2, or pick another one. Some potential options include U-Net or DeepLabV3+.\n",
+    "- The model should classify crop type (e.g., Wheat, Rice, Maize, Vegetation, Bare Soil).\n",
+    "- Evaluate the model's performance on a validation set and report on its effectiveness in\n",
+    "mapping different crop types.\n",
+    "### Notes:\n",
+    "- **Dataset Choice**: Choose a dataset suitable for crop mapping tasks. This could be a\n",
+    "simpler one like Munich480, or more extensive ones available on Google Earth Engine\n",
+    "or Kaggle.\n",
+    "- Provide any files that you think are useful for the evaluation of your model, learning\n",
+    "curves, metrics and such. This should include your code, the model weights or\n",
+    "checkpoints, and any visuals and explanations you think are relevant.\n",
+    "- Given the allotted time, focus on having clean, reproducible code. The goal of this last\n",
+    "section is to understand how you could approach a fine-tuning task."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 🌾 Fine-Tuning a Model for Crop Type Classification (What I Would Have Done)\n",
+    "\n",
+    "Unfortunately, I didn’t have enough time to complete this part due to limited access to Colab’s GPU and the constraints of working on a slower personal machine with large datasets. I prefered to keep the time I had to improve/clean the first two sections.\n",
+    "\n",
+    "That said, here is what I **would have done to fine-tune a model** for crop type classification:\n",
+    "\n",
+    "### 1. 🗂️ Find a Suitable Dataset\n",
+    "- The first step would be to find a relevant dataset that includes **crop type annotations**. Ideally, the dataset should:\n",
+    "  - Be large enough to support generalization.\n",
+    "  - Contain classes that match our objectives (i.e. crop types).\n",
+    "  - Be in a compatible format — some models (like YOLO) don’t use GeoTIFFs for labels, but instead require **polygon annotations** for each object/class.\n",
+    "\n",
+    "- If the model will later be applied to external data, it’s crucial to understand and **reproduce the same preprocessing** used in the dataset:\n",
+    "  - What satellite imagery is used? (e.g., Sentinel-2 L2A?)\n",
+    "  - Which spectral bands are included?\n",
+    "  - How are the images normalized or augmented?\n",
+    "\n",
+    "### 2. 🔄 Convert and Clean the Dataset\n",
+    "- If necessary, convert the dataset into the format required by the model/framework (e.g., TensorFlow, PyTorch, or YOLO).\n",
+    "- Consider simplifying the dataset:\n",
+    "  - **Reduce the number of classes** to only those that are relevant.\n",
+    "  - **Drop unnecessary bands** to reduce model complexity and training time.\n",
+    "  - This can lead to faster training and better performance.\n",
+    "\n",
+    "### 3. 🧠 Select a Model Architecture\n",
+    "- Choose an appropriate model architecture based on research and prior work.\n",
+    "- Ideally, use a **pretrained model** — transfer learning can significantly improve performance and reduce training time.\n",
+    "  - It's okay if the pretrained model isn’t a perfect fit, as we’ll be fine-tuning it on our dataset.\n",
+    "  - Ensure the **input shape is compatible** or adaptable.\n",
+    "\n",
+    "### 4. ⚙️ Adjust Hyperparameters\n",
+    "- Tune key hyperparameters like:\n",
+    "  - Optimizer (Adam for example)\n",
+    "  - Learning rate\n",
+    "  - Batch size\n",
+    "  - Dropout rates\n",
+    "- These can be adjusted manually or through experimentation.\n",
+    "\n",
+    "### 5. 🚀 Data Augmentation and Training the Model\n",
+    "- To increase the robustness of the model we may want to implement **data augmentation** techniques like:\n",
+    "  - Random rotations\n",
+    "  - Flips\n",
+    "  - Brightness and contrast adjustments\n",
+    "  - Cropping and scaling\n",
+    "  \n",
+    "  This helps the model generalize better by exposing it to a wider variety of data.\n",
+    "\n",
+    "- Use a GPU environment like Colab to speed up training.\n",
+    "- Monitor training progress with:\n",
+    "  - Validation loss/accuracy\n",
+    "  - Early stopping to prevent overfitting\n",
+    "  - Model checkpointing to save the best weights\n",
+    "\n",
+    "- If training is too slow:\n",
+    "  - Consider simplifying the dataset (fewer classes, lower resolution)\n",
+    "  - Try a lighter model architecture\n",
+    "\n",
+    "### 6. 📊 Analyzing the Results\n",
+    "- Evaluate both qualitatively and quantitatively:\n",
+    "  - **Training curves**: Is validation loss still decreasing? Signs of overfitting?\n",
+    "  - **Global metrics**: Accuracy, precision, recall, F1-score. How does my model perform classifying pixels\n",
+    "  - **Confusion matrix**: Which crop types are well classified? Are two or more often mixed up together ?\n",
+    "- Don’t forget to evaluate on a **test set the model has never seen** to get a true measure of generalization."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Possible datasets :**\n",
+    "\n",
+    "https://huggingface.co/datasets/IGNF/PASTIS-HD/blob/main/README.md?code=true#L14\n",
+    "\n",
+    "https://www.kaggle.com/datasets/artelabsuper/sentinel2-munich480\n",
+    "\n",
+    "https://huggingface.co/datasets/GFM-Bench/SegMunich/blob/main/README.md"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'yaml'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mkagglehub\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# Download latest version\u001b[39;00m\n\u001b[1;32m      4\u001b[0m path \u001b[38;5;241m=\u001b[39m kagglehub\u001b[38;5;241m.\u001b[39mdataset_download(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124martelabsuper/sentinel2-munich480\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/.pyenv/versions/rubicon/lib/python3.10/site-packages/kagglehub/__init__.py:4\u001b[0m\n\u001b[1;32m      1\u001b[0m __version__ \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m0.3.11\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mkagglehub\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlogger\u001b[39;00m  \u001b[38;5;66;03m# configures the library logger.\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mkagglehub\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m colab_cache_resolver, http_resolver, kaggle_cache_resolver, registry\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mkagglehub\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mauth\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m login, whoami\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mkagglehub\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcompetition\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m competition_download\n",
+      "File \u001b[0;32m~/.pyenv/versions/rubicon/lib/python3.10/site-packages/kagglehub/colab_cache_resolver.py:11\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mkagglehub\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mhandle\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m DatasetHandle, ModelHandle\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mkagglehub\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlogger\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m EXTRA_CONSOLE_BLOCK\n\u001b[0;32m---> 11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mkagglehub\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpackages\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m PackageScope\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mkagglehub\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mresolver\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Resolver\n\u001b[1;32m     14\u001b[0m COLAB_CACHE_MOUNT_FOLDER_ENV_VAR_NAME \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCOLAB_CACHE_MOUNT_FOLDER\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "File \u001b[0;32m~/.pyenv/versions/rubicon/lib/python3.10/site-packages/kagglehub/packages.py:16\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtypes\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ModuleType\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtyping\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Any, Callable, Optional\n\u001b[0;32m---> 16\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mkagglehub\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m registry\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mkagglehub\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mauth\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m get_username\n\u001b[1;32m     18\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mkagglehub\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcache\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m get_cached_path\n",
+      "File \u001b[0;32m~/.pyenv/versions/rubicon/lib/python3.10/site-packages/kagglehub/registry.py:4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtyping\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Generic, Optional, TypeVar\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mkagglehub\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mhandle\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m CompetitionHandle, DatasetHandle, ModelHandle, NotebookHandle, ResourceHandle\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mkagglehub\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mresolver\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Resolver\n\u001b[1;32m      6\u001b[0m T \u001b[38;5;241m=\u001b[39m TypeVar(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mT\u001b[39m\u001b[38;5;124m\"\u001b[39m, bound\u001b[38;5;241m=\u001b[39mResourceHandle)\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mMultiImplRegistry\u001b[39;00m(Generic[T]):\n",
+      "File \u001b[0;32m~/.pyenv/versions/rubicon/lib/python3.10/site-packages/kagglehub/resolver.py:5\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtyping\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Generic, Optional, TypeVar\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mkagglehub\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mhandle\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ResourceHandle\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mkagglehub\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtracker\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m register_datasource_access\n\u001b[1;32m      7\u001b[0m T \u001b[38;5;241m=\u001b[39m TypeVar(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mT\u001b[39m\u001b[38;5;124m\"\u001b[39m, bound\u001b[38;5;241m=\u001b[39mResourceHandle)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mResolver\u001b[39;00m(Generic[T]):\n",
+      "File \u001b[0;32m~/.pyenv/versions/rubicon/lib/python3.10/site-packages/kagglehub/tracker.py:4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpathlib\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtyping\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Any, Optional, Union\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01myaml\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mkagglehub\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mhandle\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m      7\u001b[0m     CompetitionHandle,\n\u001b[1;32m      8\u001b[0m     DatasetHandle,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     19\u001b[0m     parse_utility_script_handle,\n\u001b[1;32m     20\u001b[0m )\n\u001b[1;32m     22\u001b[0m \u001b[38;5;66;03m# Current version of the file format written here\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'yaml'"
+     ]
+    }
+   ],
    "source": [
     "import kagglehub\n",
     "\n",
@@ -15,15 +142,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "https://huggingface.co/datasets/IGNF/PASTIS-HD/blob/main/README.md?code=true#L14"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
