corrected nvdi to ndvi

--- a/notebooks/section_one.ipynb
+++ b/notebooks/section_one.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,8 +105,8 @@
     "end_date = datetime(2024, 9, 30).strftime(\"%Y-%m-%d\")\n",
     "cloud_cover_limit = 20\n",
     "\n",
-    "#Choose from nvdi, evi, gndvi, ndre, savi, arvi\n",
-    "vegetation_index = 'nvdi'\n",
+    "#Choose from ndvi, evi, gndvi, ndre, savi, arvi\n",
+    "vegetation_index = 'ndvi'\n",
     "\n",
     "AOI_path = '../AOI_Rubicon.geojson'\n",
     "with open(AOI_path, 'r') as file:\n",
