Added one comment in section 3

--- a/notebooks/section_three.ipynb
+++ b/notebooks/section_three.ipynb
@@ -54,6 +54,7 @@
     "  - **Reduce the number of classes** to only those that are relevant.\n",
     "  - **Drop unnecessary bands** to reduce model complexity and training time.\n",
     "  - This can lead to faster training and better performance.\n",
+    "  - Split dataset in test/train/val if it is not already done\n",
     "\n",
     "### 3. 🧠 Select a Model Architecture\n",
     "- Choose an appropriate model architecture based on research and prior work.\n",
@@ -68,6 +69,7 @@
     "  - Batch size\n",
     "  - Dropout rates\n",
     "- These can be adjusted manually or through experimentation.\n",
+    "- Use model versioning like MLFlow to keep track of the different results (especially if you use more than one model)\n",
     "\n",
     "### 5. 🚀 Data Augmentation and Training the Model\n",
     "- To increase the robustness of the model we may want to implement **data augmentation** techniques like:\n",
